@@ -121,6 +121,7 @@ The following bugs are resolved with this release:
   [22679] getcwd(3) can succeed without returning an absolute path
     (CVE-2018-1000001)
   [22685] powerpc: Fix syscalls during early process initialization
+  [22786] Fix path length overflow in realpath
   [22715] x86-64: Properly align La_x86_64_retval to VEC_SIZE
   [22774] malloc: Integer overflow in malloc (CVE-2018-6551)
   [23005] resolv: Fix crash in resolver on memory allocation failure
